# knowledge-distillation-demo

./: README.md  config.toml  pyproject.toml  readme.md  train.py
models/: __init__.py  dpn.py  mobilenetv2.py
trainers/: epoch.py
utils/: dataloader.py  metric.py  transform.py
