[tool.poetry]
name = "distill_demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.4.0"
torchvision = "^0.5.0"
tqdm = "^4.43.0"
numpy = "^1.18.1"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
ipython = "^7.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
